--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
-MONGO_URI=mongodb://127.0.0.1:27017/employee_training
 PORT=5000
+MONGO_URI=mongodb://127.0.0.1:27017/employee_training
+JWT_SECRET=replace_this_with_a_long_random_string
+JWT_EXPIRES_IN=7d
+CLIENT_ORIGIN=http://localhost:3000
