--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,17 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-markdown-preview": "^5.1.5",
+    "@uiw/react-md-editor": "^4.0.11",
+    "easymde": "^2.20.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.544.0",
+    "quill": "^2.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
