--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.2.0",
+    "recharts": "^3.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
